# $Id$

htmldatadir = ${datadir}/doc/@PACKAGE@/html

dist_htmldata_DATA =	bartdb_months.php 	\
			chart.php 		\
			days.php 		\
			display.php 		\
			download.php 		\
			fitsdb.php 		\
			images.php		\
			index.php		\
			infos.php		\
			login.php		\
			logout.php		\
			medias.php		\
			menu.php		\
			night.php		\
			observations.php	\
			plan.php		\
			preview.php		\
			radec.php		\
			settings.php		\
			statistics_gen.php	\
			targets.php		\
			types.php
