# $Id$

noinst_HEADERS = rts2.h config.h imghdr.h status.h telescope_info.h imgdisplay.h connection.h logstream.h \
		message.h strtok.h xmlerror.h teld.h camd.h dome.h sensord.h focusd.h filterd.h	phot.h rotad.h \
		mirror.h block.h daemon.h device.h scriptdevice.h devclient.h command.h rts2event.h objectcheck.h   \
		hoststring.h utilsfunc.h app.h getopt_own.h option.h rts2address.h connuser.h value.h valuestat.h valuelist.h valuearray.h \
		iniparser.h configuration.h rts2object.h rts2serverstate.h libnova_cpp.h timestamp.h rts2format.h \
		valueminmax.h valuerectangle.h rts2data.h error.h nan.h riseset.h nimotion.h connnosend.h connfork.h connnotify.h \
		radecparser.h
