# $Id$

SUBDIRS = connection rts2db rts2script rts2fits rts2lx200 rts2scheduler vermes rts2json xmlrpc++ sep

noinst_HEADERS = rts2.h imghdr.h status.h bbstatus.h imgdisplay.h connection.h logstream.h \
		message.h strtok.h xmlerror.h teld.h camd.h dome.h cupola.h sensord.h sensorgpib.h focusd.h filterd.h phot.h rotad.h \
		mirror.h block.h daemon.h device.h multidev.h scriptdevice.h devclient.h command.h event.h objectcheck.h   \
		hoststring.h utilsfunc.h app.h getopt_own.h option.h getaddrinfo.h networkaddress.h connuser.h value.h valuestat.h valuelist.h valuearray.h \
		iniparser.h configuration.h object.h centralstate.h serverstate.h libnova_cpp.h timestamp.h rts2format.h \
		valueminmax.h valuerectangle.h data.h error.h nan.h riseset.h nimotion.h connnosend.h connnotify.h \
		radecparser.h askchoice.h cliapp.h rts2target.h domeford.h client.h displayvalue.h clicupola.h clirotator.h fork.h gem.h \
		telmodel.h gpointmodel.h simbadtarget.h \
		tpointmodel.h tpointmodelterm.h expander.h expression.h counted_ptr.h infoval.h userlogins.h userpermissions.h \
		door_vermes.h vermes.h slitazimuth.h OakHidBase.h OakFeatureReports.h tsqueue.h dirsupport.h altaz.h constsitech.h
		sgp4.h catd.h dut1.h pid.h Point.hpp Axisd.hpp
