bin_SCRIPTS = rts2-queue rts2-json rts2-bb-json rts2-astrometry.net rts2-sextractor rts2-log \
	imgp_analysis.py rts2-focusing gpoint mosaic-combine satvis rts2-bsc-wcs rts2-build-model-verify \
	rts2-build-model-tool rts2-verify-tracking

EXTRA_DIST = flat.py guide.py masterflat.py center.py match.py systemtest.py \
	rts2-queue rts2-json rts2-astrometry.net rts2-sextractor imgp_analysis.py rts2-focusing \
	acquire.py \
	rts2-queue rts2-json rts2-bb-json rts2-astrometry.net rts2-log model-input.py subtract.py \
	plot-model.py rts2-parse-bsc


SUBDIRS = rts2saf
