bin_SCRIPTS = rts2-queue rts2-json rts2-bb-json rts2-astrometry.net rts2-sextractor rts2-log \
	imgp_analysis.py rts2-focusing gpoint mosaic-combine satvis rts2-bsc-wcs rts2-build-model-verify \
	rts2-build-model-tool rts2-verify-tracking rts2-fits2gpoint rts2-start rts2-stop upoint2gpoint \
	rts2-guide rts2-scat dump-sitech

EXTRA_DIST = flat.py guide.py guide-altaz.py masterflat.py center.py match.py systemtest.py \
	rts2-queue rts2-json rts2-astrometry.net rts2-sextractor imgp_analysis.py rts2-focusing \
	acquire.py \
	rts2-queue rts2-json rts2-bb-json rts2-astrometry.net rts2-log subtract.py \
	plot-model.py rts2-parse-bsc rts2-start.in rts2-stop.in

SUBDIRS = rts2saf
