noinst_HEADERS = appdb.h target.h target_auger.h targetell.h targetset.h simbadtarget.h mpectarget.h recvals.h \
	records.h recordsavg.h targetgrb.h \
	devicedb.h imageset.h imagesetstat.h observation.h observationset.h messagedb.h userset.h user.h \
	sqlerror.h camlist.h constraints.h taruser.h rts2count.h labels.h scriptcommands.h sqlcolumn.h \
	timelog.h planset.h plan.h accountset.h account.h
