noinst_HEADERS = \
	base64.h \
	urlencoding.h \
	XmlRpcClient.h \
	XmlRpcDispatch.h \
	XmlRpcException.h \
	XmlRpc.h \
	XmlRpcServerConnection.h \
	XmlRpcServer.h \
	XmlRpcServerMethod.h \
	XmlRpcServerGetRequest.h \
	XmlRpcSocket.h \
	XmlRpcSocketSSL.h \
	XmlRpcSource.h \
	XmlRpcUtil.h \
	XmlRpcValue.h
